test/fail/Issue481NonExistentModule.agda
-- Andreas, 2012-10-20
module Issue481NonExistentModule where

open import NonExistentModule Set
-- test the error message and location



